# soccer-viz

./: .gitignore  README.md  preview.ipynb  pyproject.toml
src/soccer_viz/: __init__.py  _models.py  _utils.py  _visualization.py
tests/: test_models.py  test_visualization.py
