[project]
name = "soccer-viz"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "tanzhijian", email = "tanzhijianorg@outlook.com" }
]
dependencies = [
    "plotly>=6.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.12.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "anywidget>=0.9.18",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/soccer_viz"]

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.pyright]
venvPath = "."
venv = ".venv"
